--- a/pages/howItWorks.html
+++ b/pages/howItWorks.html
@@ -66,44 +66,63 @@
                 </div>
             </nav>
             <footer class="footer-section">
-                <div class="container py-3">
-                    <div class="row gy-4">
-                        <div class="col-md-2 col-6">
+                <div class="container">
+                    <div class="row gy-4 py-4">
+                        <!-- Column 1: Quick Links -->
+                        <div class="col-lg-2 col-md-3 col-12">
                             <h5 class="footer-title">Quick Links</h5>
                             <ul class="footer-links">
                                 <li><a href="home.html">Home</a></li>
                                 <li><a href="aboutUs.html">About us</a></li>
                                 <li><a href="services.html">Services</a></li>
-                                <li><a href="howItWorks.html">How it Works</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-2 col-6">
-                            <h5 class="footer-title"><br /></h5>
-                            <ul class="footer-links">
-                                <li><a href="teacher.html">Registrations</a></li>
+                                <li><a href="howItWorks.html">How it works</a></li>
+                                <li><a href="teacher.html">Registration</a></li>
+                                <li><a href="contactUs.html">Contact Us</a></li>
                                 <li><a href="testimonials.html">Testimonials</a></li>
-                                <li><a href="contactUs.html">Contact us</a></li>
                             </ul>
                         </div>
 
-                        <div class="col-md-4 col-6">
-                            <h5 class="footer-title">Get in Touch</h5>
-                            <p>📞 +91 7397554929</p>
-                            <p>📧 mqubetuitions@gmail.com</p>
-                            <p>🌐 www.mqubetuitions.com</p>
+                        <!-- Column 2: Connect With Us + Follow -->
+                        <div class="col-lg-3 col-md-4 col-12">
+                            <h5 class="footer-title">Connect With Us</h5>
+                            <div class="footer-contact">
+                                <p><i class="bi bi-telephone-fill"></i> <a href="tel:+917397554929">+91 7397554929</a></p>
+                                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:mqubetuitions@gmail.com">mqubetuitions@gmail.com</a></p>
+                                <p><i class="bi bi-globe"></i> <a href="https://mqubetuitions.com" target="_blank">www.mqubetuitions.com</a></p>
+                            </div>
+                            <h5 class="footer-title mt-3">Follow</h5>
+                            <ul class="footer-social-links">
+                                <li><a href="#" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a></li>
+                                <li><a href="#" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a></li>
+                                <li><a href="#" target="_blank" title="WhatsApp"><i class="bi bi-whatsapp"></i></a></li>
+                                <li><a href="#" target="_blank" title="Twitter"><i class="bi bi-twitter-x"></i></a></li>
+                                <li><a href="#" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a></li>
+                            </ul>
                         </div>
 
-                        <div class="col-md-4 col-6">
-                            <h5 class="footer-title">Visit</h5>
-                            <p>MQube Tuitions</p>
-                            <p>3/6 Ganapathy Nagar, L. Poolangulam, Madurai - 20</p>
-                            <ul class="footer-links d-flex gap-4">
-                                <h5 class="footer-title">Follow Us</h5>
-                                <li><a href="#" target="_blank"><i class="bi bi-facebook"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="bi bi-instagram"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="bi bi-twitter-x"></i></a></li>
-                                <li><a href="#" target="_blank"><i class="bi bi-linkedin"></i></a></li>
-                            </ul>
+                        <!-- Column 3: Location Map + Visit -->
+                        <div class="col-lg-5 col-md-5 col-12">
+                            <h5 class="footer-title">Location</h5>
+                            <div class="footer-map" aria-label="Location map">
+                                <iframe
+                                    src=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                    aria-label="Google Maps embed">
+                                </iframe>
+                            </div>
+                            <h5 class="footer-title mt-3">Visit</h5>
+                            <div class="footer-address">
+                                <p>3/6, Ganapathy Nagar, L.Poolangulam, Madurai - 20.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Copyright -->
+                    <div class="footer-copywrap">
+                        <div class="footer-divider"></div>
+                        <div class="footer-copyright text-center">
+                            <p>&copy; Copyright 2025 MQUBE. ALL RIGHTS RESERVED.</p>
                         </div>
                     </div>
                 </div>
@@ -112,6 +131,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/map.js"></script>
 </body>
 
 </html>
