added form validations

--- a/pages/student.html
+++ b/pages/student.html
@@ -162,12 +162,17 @@
 
                                 <div class="col-md-6">
                                     <label class="form-label">Contact No *</label>
-                                    <input type="text" class="form-control custom-input" required>
+                                    <input id="contactNo" type="text" class="form-control custom-input" required>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <label class="form-label">WhatsApp No</label>
+                                    <input id="whatsappNo" type="text" class="form-control custom-input">
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="form-label">Email Id *</label>
-                                    <input type="email" class="form-control custom-input" required>
+                                    <input id="emailId" type="email" class="form-control custom-input" required>
                                 </div>
 
                                 <div class="col-12">
