--- a/pages/teacher.html
+++ b/pages/teacher.html
@@ -89,7 +89,7 @@
                                     <label class="form-label">Qualification *</label>
                                     <select class="form-select custom-input" required>
                                         <option value="">Select</option>
-                                        <option>High School Diploma / Equivalent</option>
+                                        <option>High SchoolDiploma / Equivalent</option>
                                         <option>Associate's Degree (A.A., A.S., or equivalent)</option>
                                         <option>Bachelor's Degree (B.A., B.S., B.Ed., or equivalent)</option>
                                         <option>Master's Degree (M.A., M.S., M.Ed., MBA, or equivalent)</option>
@@ -162,17 +162,17 @@
 
                                 <div class="col-md-6">
                                     <label class="form-label">Contact No *</label>
-                                    <input type="text" class="form-control custom-input" required>
+                                    <input id="contactNo" type="text" class="form-control custom-input" required>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="form-label">WhatsApp No *</label>
-                                    <input type="text" class="form-control custom-input" required>
+                                    <input id="whatsappNo" type="text" class="form-control custom-input" required>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="form-label">Email Id *</label>
-                                    <input type="email" class="form-control custom-input" required>
+                                    <input id="emailId" type="email" class="form-control custom-input" required>
                                 </div>
 
                                 <div class="col-md-6">
