--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=pages/home.html">
+    <meta http-equiv="refresh" content="0; url=user/pages/home.html">
     <title>Redirecting...</title>
     <script type="text/javascript">
-        window.location.href = "pages/home.html";
+        window.location.href = "user/pages/home.html";
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="pages/home.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="user/pages/home.html">click here</a>.</p>
 </body>
 </html>
